add disclaimer note to OpSw tooltip as to firmware specifics add CS name to config pane header use dedicated IB-I/-II bundles (very few lines, as IB not configurable, buttons inactive) i18n Ln connection config screen (CS name, baud rate), share key with NCE update Uhlenbrock hardware help

--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -62,6 +62,8 @@ ConnectionName          = Connectie-naam:
 TipBaudRateFixed        = Voor dit protocol ligt de baud rate vast
 TipBaudRateMatch        = Dient overeen te komen met de baud rate instelling van de hardware
 BaudRateLabel           = Baud rate (snelheid):
+# generic connection type description
+TypeSerial              = Seri\u00eble
 SerialPortLabel         = Seri\u00eble poort:
 #FlowControl items
 FlowOptionNo            = geen flow control
