--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
@@ -62,6 +62,7 @@ LN_MSG_SWITCH_STATE_CLOSED  = Geradeaus
 LN_MSG_SWITCH_STATE_THROWN  = Abzweigend
 
 #cmdstnconfig shared Bundle items (hardware specific strings fetched using ResourceBundle)
+TitleXConfig = {0} Konfigurator
 LabelC = G
 LabelT = A
 CheckBoxReserved = Zeige reservierte Optionen
@@ -72,4 +73,5 @@ CmdStnConfigFxToolTip = <html><table><tr>sw21-22-23 Konfiguration<td></td>f\u00f
   <tr>t-t-c<td></td><td>128 FX Modus</td></tr>\
   <tr>c-t-t<td></td><td>14 Geschw.Stufen</td></tr>\
   <tr>c-c-t<td></td><td>28 Geschw.Stufen</td></tr>\
-  </table></html>
+  </table>\
+  <p>Achtung: Ihre Firmware Version kann andere Werte f\u00fcr OpSw 21-23 vorsehen</p></html>
