--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_nl.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_nl.properties
@@ -84,6 +84,7 @@ LN_MSG_SENSOR_STATE_HIGH    = Hoog
 AddOutputEntryToolTip       = een getal van 1 tot en met 2048.
 
 #cmdstnconfig shared Bundle items (hardware specific strings fetched using ResourceBundle)
+TitleXConfig                = Configureer {0}
 LabelC                      = R
 LabelT                      = A
 CheckBoxReserved            = Toon ook gereserveerde opties
