--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_es.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_es.properties
@@ -8,7 +8,14 @@ MIN_OPTION = 1
 
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
-
+DB150ConfigFxToolTip=<html><table><tr>set sw21-22-23 as<td></td><td>to activate:</td></tr>\
+  <tr>t-t-t<td></td><td>128 step mode (factory default)</td></tr>\
+  <tr>t-t-c<td></td><td>14 step mode</td></tr>\
+  <tr>t-c-t<td></td><td>28 step mode</td></tr>\
+  <tr>c-t-t<td></td><td>128 step FX mode</td></tr>\
+  <tr>c-c-t<td></td><td>28 step FX mode</td></tr>\
+  </table>\
+  <p>Note: Your firmware version may define a different pattern for OpSw 21-23</p></html>
 LabelTop = Programador de DB150 (Empire Builder)
 
 Option2 = 2: Solo booster
@@ -33,5 +40,5 @@ Option39 = 39: Limpiar toda la memoria interna
 Option41 = 41: Pulso de diagn\u00f3stico cuando se reciba comando LocoNet
 Option42 = 42: Deshabilitar los 3 pitidos cuando se purga la direcci\u00f3n de una locomotora
 Option43 = 43: Deshabilitar la actualizaci\u00f3n del estado de la v\u00eda por LocoNet
-Option50=50: Tiempo de recuperaci\u00f3n de cortocircuitos del Booster m\u00e1s largo
+Option50 = 50: Tiempo de recuperaci\u00f3n de cortocircuitos del Booster m\u00e1s largo
 Option51 = 51: No permitir reinicio del voltaje EXT
