--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_fr.properties
@@ -8,12 +8,19 @@ MIN_OPTION = 1
 
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
-
+DB150ConfigFxToolTip=<html><table><tr>set sw21-22-23 as<td></td><td>to activate:</td></tr>\
+  <tr>t-t-t<td></td><td>128 step mode (factory default)</td></tr>\
+  <tr>t-t-c<td></td><td>14 step mode</td></tr>\
+  <tr>t-c-t<td></td><td>28 step mode</td></tr>\
+  <tr>c-t-t<td></td><td>128 step FX mode</td></tr>\
+  <tr>c-c-t<td></td><td>28 step FX mode</td></tr>\
+  </table>\
+  <p>Note: Your firmware version may define a different pattern for OpSw 21-23</p></html>
 LabelTop = Programmateur DB150 (Empire Builder)
 
 Option2 = 2: Booster seulement ignor\u00e9
 Option3 = 3: Booster est autoreverse
-Option5=5: Centrale en mode Maitre (normale 'c')
+Option5 = 5: Centrale en mode Maitre (normale 'c')
 Option13 = 13: Augmenter le temps de purge de l'adresse de la loco \u00e1 600 secondes
 Option14 = 14: D\u00e9sactiver la purge de l'adresse de la loco
 Option15 = 15: La purge  force la loco \u00e1 une vitesse nulle
@@ -33,5 +40,5 @@ Option39 = 39: Effacer toute la m\u00e9moire interne
 Option41 = 41: Clic de Diagnostic quand la commande LocoNet est re\u00e7ue
 Option42 = 42: D\u00e9sactiver 3 beeps quand  l'adresse loc est purg\u00e9e
 Option43 = 43: D\u00e9sactive Mise \u00e1 jour LocoNet de l'\u00e9tat de la voie
-Option50=50: Temps de re\u00e9nclenchement plus long du Booster sur court-circuit
+Option50 = 50: Temps de re\u00e9nclenchement plus long du Booster sur court-circuit
 Option51 = 51: Ne pas autoriser le RED\u00c9MARRAGE d'une tension EXT (avec 2nd booster en parall\u00e8le)
