--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_ja_JP.properties
@@ -9,7 +9,14 @@ MIN_OPTION = 1
 
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
-
+DB150ConfigFxToolTip=<html><table><tr>set sw21-22-23 as<td></td><td>to activate:</td></tr>\
+  <tr>t-t-t<td></td><td>128 step mode (factory default)</td></tr>\
+  <tr>t-t-c<td></td><td>14 step mode</td></tr>\
+  <tr>t-c-t<td></td><td>28 step mode</td></tr>\
+  <tr>c-t-t<td></td><td>128 step FX mode</td></tr>\
+  <tr>c-c-t<td></td><td>28 step FX mode</td></tr>\
+  </table>\
+  <p>Note: Your firmware version may define a different pattern for OpSw 21-23</p></html>
 LabelTop = DB150 (\u30a8\u30f3\u30d1\u30a4\u30a2\u30d3\u30eb\u30c0\u30fc\u2122) \u30d7\u30ed\u30b0\u30e9\u30de
 
 Option2 = 2: \u30d6\u30fc\u30b9\u30bf\u30fc\u306e\u307f\u30aa\u30fc\u30d0\u30fc\u30e9\u30a4\u30c9
