--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS100options_nl.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS100options_nl.properties
@@ -32,6 +32,7 @@ Option25 = 25: Doorverwijzen uitgeschakeld
 Option26 = 26: Wisselstraten actief
 Option27 = 27: Normale Wisselbesturing uitgeschakeld (Bushby Bit)
 Option28 = 28: Opvragen status DS54 na opstarten uitgeschakeld
+Option31=31:Gebruik Wissel(straten) Uitgang als Motorola Modus uitgeschakeld is
 Option33 = 33: Na inschakelen baanspanning herstellen
 Option34 = 34: Na inschakelen baanspanning en snelheid herstellen
 Option36 = 36: Alle info over locs en tracties wissen in DCS100
