--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_de.properties
@@ -1,8 +1,8 @@
-# Defaultoptions.properties
+# Defaultoption_de.properties
 #
-# by Simon Ginsburg
 # German command station options for when the command
 # station isn't recognized.  These are the same as the Chief (DCS100)
+# Translation by Simon Ginsburg
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
