--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_da.properties
@@ -9,12 +9,19 @@ MIN_OPTION = 1
 
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
-
+DB150ConfigFxToolTip=<html><table><tr>set sw21-22-23 as<td></td><td>to activate:</td></tr>\
+  <tr>t-t-t<td></td><td>128 step mode (factory default)</td></tr>\
+  <tr>t-t-c<td></td><td>14 step mode</td></tr>\
+  <tr>t-c-t<td></td><td>28 step mode</td></tr>\
+  <tr>c-t-t<td></td><td>128 step FX mode</td></tr>\
+  <tr>c-c-t<td></td><td>28 step FX mode</td></tr>\
+  </table>\
+  <p>Note: Your firmware version may define a different pattern for OpSw 21-23</p></html>
 LabelTop = DB150 (Empire Builder) Programmer
 
 Option2 = 2: Booster only override
 Option3 = 3: Booster is autoreversing
-Option5=5: Command station master mode (normally 'c')
+Option5 = 5: Command station master mode (normally 'c')
 Option13 = 13: Raise loco address purge time to 600 seconds
 Option14 = 14: Disable loco address purging
 Option15 = 15: Purge will force a loco to zero speed
