--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_de.properties
@@ -9,14 +9,14 @@ MIN_OPTION = 1
 
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
-
-DB150ConfigFxToolTip = <html><table><tr>sw21-22-23 Konfiguration<td></td>f\u00fcr:<td></td></tr>\
-  <tr>t-t-t<td></td><td>128 step mode (factory default)</td></tr>\
-  <tr>t-t-c<td></td><td>14 step mode</td></tr>\
-  <tr>t-c-t<td></td><td>28 step mode</td></tr>\
-  <tr>c-t-t<td></td><td>128 step FX mode</td></tr>\
-  <tr>c-c-t<td></td><td>28 step FX mode</td></tr>\
-  </table></html>
+DB150ConfigFxToolTip=<html><table><tr>sw21-22-23 Konfiguration<td></td>f\u00fcr:<td></td></tr>\
+  <tr>t-t-t<td></td><td>128 Geschw.Stufen (factory default)</td></tr>\
+  <tr>t-t-c<td></td><td>14 Geschw.Stufen</td></tr>\
+  <tr>t-c-t<td></td><td>28 Geschw.Stufen</td></tr>\
+  <tr>c-t-t<td></td><td>128 Stufen FX Modus</td></tr>\
+  <tr>c-c-t<td></td><td>28 Stufen FX Modus</td></tr>\
+  </table>\
+  <p>Achtung: Ihre Firmware Version kann andere Werte f\u00fcr OpSw 21-23 vorsehen</p></html>
 
 LabelTop = DB150 (Empire Builder) Konfigurator
 
