--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_it.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_it.properties
@@ -1,9 +1,7 @@
-# DB150options.properties
+# DB150options_it.properties
 #
-#
-# Italian translation: Enzo Fortuna (babbo_enzo@yahoo.com )
-#
-# Default command station options for the DB150 (Empire Builder)
+# Italian command station options for the DB150 (Empire Builder)
+# Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,7 +9,14 @@ MIN_OPTION = 1
 
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
-
+DB150ConfigFxToolTip=<html><table><tr>set sw21-22-23 as<td></td><td>to activate:</td></tr>\
+  <tr>t-t-t<td></td><td>128 step mode (factory default)</td></tr>\
+  <tr>t-t-c<td></td><td>14 step mode</td></tr>\
+  <tr>t-c-t<td></td><td>28 step mode</td></tr>\
+  <tr>c-t-t<td></td><td>128 step FX mode</td></tr>\
+  <tr>c-c-t<td></td><td>28 step FX mode</td></tr>\
+  </table>\
+  <p>Note: Your firmware version may define a different pattern for OpSw 21-23</p></html>
 LabelTop = Programmatore DB150 (Empire Builder)
 
 Option2 = 2: Programma come Solo-Booster
@@ -36,5 +41,5 @@ Option39 = 39: Cancella tutta la memoria inerna
 Option41 = 41: Click Diagnostica su comando LocoNet ricevuto
 Option42 = 42: Disabilita 3 beeps quando si cancella Indirizzo loco
 Option43 = 43: Disabilita Aggiornamento Stato Binari LocoNet
-Option50=50: Allunga tempo di ripristino Booster da corto circuito
+Option50 = 50: Allunga tempo di ripristino Booster da corto circuito
 Option51 = 51: Non permettere RESTART da Tensione EXT
