--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_nl.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_nl.properties
@@ -1,4 +1,4 @@
-# DCS50options_nl.properties
+# DB150options_nl.properties
 #
 # Dutch command station options for the DCS50 (Zephyr)
 # Translation by Egbert Broerse
@@ -9,14 +9,14 @@ MIN_OPTION = 1
 
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
-
-DB150ConfigFxToolTip = <html><table><tr>stel sw21-22-23 in als<td></td><td>voor:</td></tr>\
+DB150ConfigFxToolTip=<html><table><tr>stel sw21-22-23 in als<td></td><td>voor:</td></tr>\
   <tr>t-t-t<td></td><td>128 staps modus (factory default)</td></tr>\
   <tr>t-t-c<td></td><td>14 staps modus</td></tr>\
   <tr>t-c-t<td></td><td>28 staps modus</td></tr>\
   <tr>c-t-t<td></td><td>128 staps FX modus</td></tr>\
   <tr>c-c-t<td></td><td>28 staps FX modus</td></tr>\
-  </table></html>
+  </table>\
+  <p>Note: Je firmware versie kan een afwijkend patroon voor OpSw 21-23 vereisen</p></html>
 
 LabelTop = DB150 (Empire Builder) Configuratie
 
