catalog add Dutch translation, props file headers clean-up, reuse existing color keys, insert button name as var in string remove non-ascii encoded chars from LE to enable IDE comment out unused display.PaletteBundle keys

--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_da.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_da.properties
@@ -5,10 +5,7 @@
 
 # Tab labels
 # most fetched from NamedBeanBundle
-RPSReporter = RPSReporter
-Icon        = Ikon
-Background  = Baggrund
-Text        = Tekst
+Text            = Tekst
 IndicatorTrack  = Indicator Track
 IndicatorTO     = Indicator Turnout
 
@@ -20,49 +17,49 @@ DontUseTrack    = Out Of Service
 ErrorTrack      = Power Fejl
 
 BlockSegment    = Blok Segment
-LeftEndSegment  = Left End Segment   
-RightEndSegment = Right End Segment
+#LeftEndSegment  = Left End Segment
+#RightEndSegment = Right End Segment
 
-block       = Synlig
-path        = Path Editing
-hidden      = Skjult
-toArrow     = Exit Arrow
-fromArrow   = Entry Arrow
+block           = Synlig
+path            = Path Editing
+hidden          = Skjult
+toArrow         = Exit Arrow
+fromArrow       = Entry Arrow
 
 OccupancySensor = Occupancy Circuit
 ErrorSensor     = Fejl Sensor   
 
-IconSetName = Ikon S\u00e6t Navn:
-IconName    = Ikon Navn:
-editText    = Rediger Text
-LinkName    = Panel ellr URL Navn
-ToolTipLink = Enter link to JMRI panel or http URL (optional)
+IconSetName     = Ikon S\u00e6t Navn:
+#IconName        = Ikon Navn:
+#editText        = Rediger Text
+LinkName        = Panel ellr URL Navn
+ToolTipLink     = Enter link to JMRI panel or http URL (optional)
 
 # Button labels
-CreateNewItem = Tilf\u00f8j Nyt Element...
-ShowIcons  = Vis Ikoner
-HideIcons  = Skjul Ikoner
-ButtonEditIcons  = Rediger Ikoner
-ButtonShowCatalog= Ikon Katalog
-HideCatalog= Skjul Katalog
+CreateNewItem   = Tilf\u00f8j Nyt Element...
+ShowIcons       = Vis Ikoner
+HideIcons       = Skjul Ikoner
+ButtonEditIcons = Rediger Ikoner
+ButtonShowCatalog = Ikon Katalog
+HideCatalog     = Skjul Katalog
 ButtonBackgroundColor = Baggrunds Farve
-updateButton = Opdater Panel
-addNewFamily = Tilf\u00f8j Nyt Ikon S\u00e6t
-addIcon    = Tilf\u00f8j Ikon
-deleteIcon = Slet Ikon
+updateButton    = Opdater Panel
+addNewFamily    = Tilf\u00f8j Nyt Ikon S\u00e6t
+addIcon         = Tilf\u00f8j Ikon
+deleteIcon      = Slet Ikon
 createNewFamily = Nyt Ikon S\u00e6t
-deleteFamily = Slet Ikon S\u00e6t
-ClearSelection = Clear Table Selections
-leverPosition = LeverPosition
-LeftRight = Klik Venstre/H\u00f8jre
-UpDown = Klik Op/Ned
-ReadMemory = Display Memory
+deleteFamily    = Slet Ikon S\u00e6t
+ClearSelection  = Clear Table Selections
+#leverPosition   = LeverPosition
+LeftRight       = Klik Venstre/H\u00f8jre
+UpDown          = Klik Op/Ned
+ReadMemory      = Display Memory
 ReadWriteMemory = Input Box Memory
-SpinnerMemory = Spinner Memory
-ComboMemory = ComboBox Memory
-OpenPicklist = \u00c5ben Detector Picklist
+SpinnerMemory   = Spinner Memory
+ComboMemory     = ComboBox Memory
+OpenPicklist    = \u00c5ben Detector Picklist
 addMissingStatus = Tilf\u00f8j Missing Status
-deleteStatus = Slet Status
+deleteStatus    = Slet Status
 setDefaultIcons = S\u00e6t Default Ikoner
 
 #title
@@ -76,21 +73,21 @@ infoTitle       = Information
 invisibleIcon   = invisible Icon
 circuitPaths    = Circuit Paths
 
-ColorChooser = Baggrunds Farve V\u00e6lger
-PanelColor = Kontrol Panel Farve
+ColorChooser    = Baggrunds Farve V\u00e6lger
+PanelColor      = Kontrol Panel Farve
 
-first   = First
-second  = Second
-third   = Third
-fourth  = Fourth
-fifth   = Fifth
-sixth   = Sixth
-seventh = Seventh
-eighth  = Eighth
-nineth  = Ninth
-tenth   = Tenth
+first           = First
+second          = Second
+third           = Third
+fourth          = Fourth
+fifth           = Fifth
+sixth           = Sixth
+seventh         = Seventh
+eighth          = Eighth
+nineth          = Ninth
+tenth           = Tenth
                                          
-scale = scale {0}:1
+scale           = scale {0}:1
 
 FamilyName      = Ikon S\u00e6t "{0}".
 EnterFamilyName = Indtast et navn for dette ikon s\u00e6t.
@@ -101,7 +98,7 @@ NeedPosition    = This Multisensor needs {0} positions.  Select more rows from t
 NeedIcon        = This Multisensor has only {0} positions.  Clear selections to change position order.\nFor additional positions, add another icon.
 AllFamiliesDeleted = All Icon sets for type {0} have been deleted.\nDo you want to restore the default sets?
 FamilyNotFound  = Ikon Set "{1}" not found in type "{0}".
-RedX            = Red X
+#RedX            = Red X
 NoIconName      = Venligst indtast et navn for Ikonet:
 UnkownFamilyName = Icon set "{0}" is not known to the Palette.  Do you want to add it to the icon sets?\nSelect "No" and no further messages will be posted.
 DuplicateIconName = Et andet ikon har navnet {0}.
@@ -113,10 +110,10 @@ PickStatus      = The following status icons are missing.  Choose what you want 
 SelectPathIcons = Select the path(s) that include this icon
 
 # Instructions
-AddToPanel = To Add an Icon to your control panel:
+AddToPanel      = To Add an Icon to your control panel:
 PickRowReporter = To add a Reporter, select its row from from the table
 DragReporter    = then drag the display panel below to your control panel.
-DragIconPanel = -- drag an icon from the display panel below to your control panel
+DragIconPanel   = -- drag an icon from the display panel below to your control panel
 DragIconCatalog = -- or press [{0}] and drag an icon from the catalog to your control panel
 ToAddDeleteModify = To change an icon in the display panel below, drag an icon from the catalog to the icon.
 ToChangeName    = To change the name of an icon below, Double Click on the name.
@@ -126,11 +123,11 @@ enterPanel      = -- for a JMRI panel, type "frame:<panel name>" into the field 
 enterURL        = -- for an URL, type the link (i.e. "http://etc") into the field at bottom.
 ToColorBackground = To Choose a Color Background: Press [{0}]
 AddClockToPanel = Drag the icon below to add a {0} to your control panel.
-nullMemoryIcon = is displayed for the Display Memory Icon when Memory is null .
+nullMemoryIcon  = is displayed for the Display Memory Icon when Memory is null .
 emptyMemoryIcon = When Memory is an empty string i.e. "" , the Display Memory Icon is blank.
-emptyMemoryFix = When blank, enter a value in the other memory icons to view and drag it.
-comboMemory2 = Use the [{0}] popup to add or delete items.
-comboMemory1 = The ComboBox Memory Icon sets a memory by selecting an item from the ComboBox.
+emptyMemoryFix  = When blank, enter a value in the other memory icons to view and drag it.
+comboMemory2    = Use the [{0}] popup to add or delete items.
+comboMemory1    = The ComboBox Memory Icon sets a memory by selecting an item from the ComboBox.
 addTextAndAttrs = Enter text and choose attributes for the label in the Preview panel. Then
  
 # tooltips
@@ -147,12 +144,12 @@ ToolTipSetIconSensor = Select sensor rows in the table in the order the Sensors 
 ToolTipAddFamily  = Create an additonal set of icons for this device
 ToolTipDeleteFamily = Delete this set of icons
 ToolTipClearSelection = Clear selected table rows
-ToolTipAddIcon = Add another icon to your icon panel. Enter a name for it.  
+ToolTipAddIcon  = Add another icon to your icon panel. Enter a name for it.  
 ToolTipDeleteIcon = Delete an icon from your icon panel. Select the icon to be deleted. 
 ToolTipAddPosition = Add an additional Sensor position to this icon set 
 ToolTipDeletePosition = Delete the last Sensor position from this icon set
 ToolTipEditColor = Choose a color for the background panel
-ToolTipCatalog = Open the Icon Catalog and drag icons from it to the panel
+ToolTipCatalog  = Open the Icon Catalog and drag icons from it to the panel
 ToolTipOccupancySensor = Enter the name of a Sensor or OBlock that detects occupancy for this track item 
 ToolTipErrorSensor = Enter the name of the Sensor that detects error conditions for this track item
 ToolTipPickLists = The pick list table displays a choice of sensors or OBlocks to do the detection
@@ -165,7 +162,7 @@ ToolTipSelectPathIcons = Check the paths this icon is needed to display the path
 ToolTipSetDefaultIcons = Change the Default Portal Icons to the selected icon family.
 
 # Decorator strings
-fixedWidth = Fast Brede
-fixedHeight = Fast H\u00f8jde
+fixedWidth      = Fast Brede
+fixedHeight     = Fast H\u00f8jde
 transparentBack = Transparent Background
-sample = Eksempel
+sample          = Eksempel
