--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_it.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_it.properties
@@ -3,9 +3,6 @@
 # Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 # Italian properties for the jmrit.display.palette package
 
-RPSReporter = Reporter RPS
-Icon = Icona
-Background = Sfondo
 Text = Testo
 IndicatorTrack = Indicatore Binario
 IndicatorTO = Indicatore Scambio
@@ -18,8 +15,8 @@ DontUseTrack = Fuori Servizio
 ErrorTrack = Errore Alim.
 
 BlockSegment = Segmento del Blocco
-LeftEndSegment = Fine Segmento Sinistra
-RightEndSegment = Fine Segmento Destra
+#LeftEndSegment = Fine Segmento Sinistra
+#RightEndSegment = Fine Segmento Destra
 
 block       = Visibile
 path        = Modifica Percorso
@@ -31,8 +28,8 @@ OccupancySensor = Sensore Blocco Occupato
 ErrorSensor = Errore Sensore
 
 IconSetName = Nome Set Icone:
-IconName = Nome Icona:
-editText = Modifica Testo
+#IconName = Nome Icona:
+#editText = Modifica Testo
 LinkName    = Pannelo o Nome URL
 ToolTipLink = Batti link a pannello JMRI o http URL (opzionale)
 
@@ -51,7 +48,7 @@ deleteIcon = cancella Icona
 createNewFamily = Crea Set Icone
 deleteFamily = Cancella Set Icone
 ClearSelection = Azzera Selezioni in Tabella
-leverPosition = Posizione Leve
+#leverPosition = Posizione Leve
 LeftRight = Click Sinistra/Destra
 UpDown = Click Su/Gi\u00f9
 ReadMemory = Visualizza Memoria
@@ -98,7 +95,7 @@ NeedIcon = Questo Multi-sensore ha solo {0} posizioni.  Cancella le selezioni pe
 AllFamiliesDeleted = Tutti i set Icone per il tipo {0} sono stati cancellati.
 FamilyNotFound = Set Icone "{1}" non trovato nel tipo "{0}".
 #AddFamily = Set Icone "{1}" non trovato nel tipo "{0}". Vuoi aggiungerlo ai Set Icone?
-RedX = Rosso X
+#RedX = Rosso X
 NoIconName = Batti un Nome per l'Icona:
 NoFamilyName = Questo set di Icone \u00e8 sconosciuto alla Tavolozza. Vuoi salvarlo?
 DuplicateIconName = Un altra icona ha nome {0}.
