--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
@@ -1,6 +1,6 @@
-# PaletteBundle.properties
+# PaletteBundle_nl.properties
 #
-# Default properties for the jmrit.display.palette package
+# Dutch properties for the jmrit.display.palette package
 
 # Tab labels
 # most from NamedBeanBundle
