--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_de.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_de.properties
@@ -6,10 +6,7 @@
 # Tab labels
 # most from NamedBeanBundle
 # remaining Tab labels:
-RPSReporter=RPS Detektor
-Background=Hintergrundbild
 Text=Text
-Icon=Sinnbild
 IndicatorTrack=Anzeigegleis
 IndicatorTO=Anzeigeweiche
 ClearTrack=Freigeben
@@ -20,8 +17,8 @@ DontUseTrack=Au\u00dfer Dienst
 ErrorTrack=Gleisstromfehler
 
 BlockSegment=Blockabschnitt
-LeftEndSegment=Linker Endabschnitt
-RightEndSegment=Rechter Endabschnitt
+#LeftEndSegment=Linker Endabschnitt
+#RightEndSegment=Rechter Endabschnitt
 
 block=Sichtbar
 hidden=Unsichtbar
@@ -33,8 +30,8 @@ OccupancySensor=Besetztmelderkreis
 ErrorSensor=Fehlerdetektor
 
 IconSetName=Sinnbilderpaketname:
-IconName=Sinnbildname:
-editText=Bearbeite Text:
+#IconName=Sinnbildname:
+#editText=Bearbeite Text:
 LinkName=Name des Gleisstellbildes oder URL
 ToolTipLink=Gebe Kopplung ein nach JMRI Gleistafel oder http URL (optionell)
 
@@ -54,7 +51,7 @@ deleteIcon=L\u00f6sche Sinnbild
 createNewFamily=Erzeuge neues Paket
 deleteFamily=L\u00f6sche Sinnbilderpaket
 ClearSelection=Deselektiere Auswahl in Tabelle
-leverPosition=Hebellage
+#leverPosition=Hebellage
 LeftRight=Klicke Links/Rechts
 UpDown=Klicke Auf/Zu
 ReadMemory=Zeige Speicher
@@ -101,7 +98,7 @@ NeedPosition=Dieser Multidetektor braucht {0} Positionen. Selektiere mehr Zeilen
 NeedIcon=Dieser Multidetektor hat nur {0} Positionen. L\u00f6sche Ausgew\u00e4hlte Zeilen um die Positionsfolge zu \u00e4ndern./nWenn man mehr Positionen braucht, f\u00fcge noch ein Sinnbild zu.
 AllFamiliesDeleted=Alle Sinnbilderpakete von Typ {0} sind gel\u00f6scht.\nWillst du die Standardsinnbilder wiederherstellen?
 FamilyNotFound=Sinnbilderpaket "{1}" nicht angetroffen von Typ "{0}".
-RedX=Roter X
+#RedX=Roter X
 NoIconName=Bitte Namen f\u00fcr Sinnbild eingeben:
 UnkownFamilyName=Sinnbilderpaket "{0}" ist auf der Palette nicht bekannt. Willst du es als Paket hinzuf\u00fcgen?\nW\u00e4hle "Nein" um weitere Meldungen zu unterdr\u00fccken.
 DuplicateIconName=Ein anderes Sinnbild hat schon den Namen {0}.
