Dutch translation of jmrit.display.palette bundle (partial) move scale bundle to share, rename Rescale context menu key item to bypass Javadoc styling

--- a/java/src/jmri/jmrit/Bundle_ca.properties
+++ b/java/src/jmri/jmrit/Bundle_ca.properties
@@ -153,6 +153,7 @@ IndicatorTO     = Indicador d'Agulla
 # horizontal alignment (for Palette editors)
 Length          = Longitud
 Name            = Nom
+scale           = Escala 1:{0}
 
 SigSys = Sistema de Senyals
 # interface colors
