--- a/java/src/jmri/jmrit/Bundle_it.properties
+++ b/java/src/jmri/jmrit/Bundle_it.properties
@@ -135,7 +135,6 @@ All=Tutti
 _and_ = {0} e {1}
 Normal = Normale
 
-
 Disabled = Disabilitato
 ColumnHeadEnabled = Abilitato
 left = Sinistra
@@ -143,6 +142,7 @@ right = Destra
 center = Centrato
 Name = Nome
 Length=Lunghezza
+scale = scala {0}:1
 
 # used in Display, Maintenance
 MultiSensor = Multi-Sensore
