--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -180,6 +180,7 @@ right           = Rechts
 center          = Midden
 Name            = Naam
 Length          = Lengte
+scale           = schaal {0}:1
 
 SigSys          = Seinsysteem
 # interface colors
