--- a/java/src/jmri/jmrit/display/DisplayBundle_ca.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_ca.properties
@@ -166,7 +166,7 @@ AlignXFirst     = Alinea Verticalment cap al primer seleccionat
 AlignYFirst     = Alinea Horitzontalment cap al primer seleccionat
 Transform       = Transforma...
 #shear           = Cisalla...
-scale           = Escala (percentage){0}
+Rescale         = Escala (percentage){0}
 Rotate          = Gira (graus)(percentage){0}
 NoZoom          = Sense Zoom                 
 Zoom            = Zoom (percentage)(percentage){0}
