--- a/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
@@ -159,7 +159,7 @@ AlignXFirst     = Zarovnat svisle na prvn\u00ed vybran\u00fd
 AlignYFirst     = Zarovnat vodorovn\u011b na prvn\u00ed vybran\u00fd
 Transform       = Transformovat...
 #shear           = Zbavit se...
-scale           = M\u011b\u0159\u00edtko (procento){0}
+Rescale         = M\u011b\u0159\u00edtko (procento){0}
 Rotate          = Oto\u010dit (stupe\u0148){0}
 NoZoom          = Nep\u0159ibli\u017eovat
 Zoom            = P\u0159ibl\u00ed\u017eit (procento){0}
