--- a/java/src/jmri/jmrit/display/DisplayBundle_de.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_de.properties
@@ -105,7 +105,7 @@ Italic=Kursiv
 Bold/italic=Fett-Kursiv
 Rotate=Drehe (Grad){0}
 RotateSign = Drehe... ({0}\u00b0)
-scale=Skaliere (prozentual){0}
+Rescale=Skaliere (prozentual){0}
 Zoom=Zoom (prozentual){0}
 SetXY=X & Y eingeben{0}
 #EnterXTooltip=Gebe neue X-Koordinate ein (in Birldschirmeinheiten)
