--- a/java/src/jmri/jmrit/display/DisplayBundle_fr.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_fr.properties
@@ -167,7 +167,7 @@ AlignXFirst     = Align\u00e9s verticalement vers le 1er s\u00e9lectionn\u00e9
 AlignYFirst     = Align\u00e9s horizontalement vers le 1er s\u00e9lectionn\u00e9
 Transform       = Transformer ...
 #shear           = cisaillement ...
-scale           = \u00c9chelle (en pourcentage){0}
+Rescale         = \u00c9chelle (en pourcentage){0}
 Rotate          = Rotation (degr\u00e9s){0}
 NoZoom          = Pas de zoom
 Zoom            = Zoom (pourcentage){0}
