--- a/java/src/jmri/jmrit/display/DisplayBundle_it.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_it.properties
@@ -165,7 +165,7 @@ AlignXFirst = Allinea Verticalmente al primo selezionato
 AlignYFirst = Allinea Orizzontalmente al primo selezionato
 Transform = Trasforma...
 #shear = Forbici...
-scale = Scala (percentuale){0}
+Rescale = Scala (percentuale){0}
 Rotate = Ruota (gradi){0}
 NoZoom = Nessun Ingrandimento
 Zoom = Ingrandimento (percentuale){0}
