--- a/java/src/jmri/jmrit/display/DisplayBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_nl.properties
@@ -3,7 +3,7 @@
 # Translation by Egbert Broerse 2017
 # Dutch properties for the jmrit.display package
 
-Title = Paneel Editor
+Title               = Paneel Editor
 
 # menu items
 MenuPanels          = Panelen
@@ -202,7 +202,7 @@ SetTooltip=Stel tootlip in{0}
 SetSysNameTooltip=Gebruik Gebruikersnaam als tooltip
 SetHidden=Verberg tenzij in Bewerking
 AlignX=Lijn uit op linkerzijde
-AlignMiddleX=Centreer (li-re)
+AlignMiddleX=Centreer (links-rechts)
 AlignOtherX=Lijn rechts uit
 AlignY=Lijn uit op bovenzijde
 AlignMiddleY=Centreer (boven-onder)
@@ -210,7 +210,7 @@ AlignOtherY=Lijn uit op onderzijde
 AlignXFirst=Lijn vertikaal uit op 1e item
 AlignYFirst=Lijn horizontaal uit op 1e item
 Transform=Vervorm...
-scale=Verschaal (procentueel){0}
+Rescale=Verschaal (procentueel){0}
 Rotation=Rotatie (graden){0}
 NoZoom=Geen Zoom
 Zoom=Zoom (percentage){0}
