--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_de.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_de.properties
@@ -64,12 +64,11 @@ deleteStatus=L\u00f6sche Statusanzeige
 setDefaultIcons=Setze Standartsinnbilder
 
 #title
-createNewIconSet=Erstelle neues Sinnbilderpaket
+createNewIconSet=Erstelle neues {0}-Sinnbilderpaket
 
 dragToPanel=Schleppe zu die Tafel
 AddToTableTitle=F\u00fcge neues Element an die Tabelle hinzu
-ShowIconsTitle=Bearbeite Sinnbilder f\u00fcr {0}
-infoTitle=Auskunft
+ShowIconsTitle=Bearbeite {0}-Sinnbilder
 invisibleIcon=unsichtbares Sinnbild
 circuitPaths=Melderkreispfade
 
@@ -86,8 +85,6 @@ seventh=Siebente
 eighth=Achtste
 nineth=Neunte
 tenth=Zente
-
-scale=Ma\u00dfstab {0}:1
 
 FamilyName=Sinnbilderpaket "{0}".
 EnterFamilyName=Gebe einen Namen ein f\u00fcr dieses Paket.
