--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
@@ -5,128 +5,125 @@
 # Tab labels
 # most from NamedBeanBundle
 # remaining Tab labels:
-Text                = Text
-IndicatorTrack      = Indicator Track
-IndicatorTO         = Indicator Turnout
-ClearTrack          = Clear
-OccupiedTrack       = Occupied
-PositionTrack       = Train Position
-AllocatedTrack      = Allocated
-DontUseTrack        = Out Of Service
-ErrorTrack          = Power Error
+Text                = Tekst
+IndicatorTrack      = Indicatiespoor
+IndicatorTO         = Indicatiewissel
+ClearTrack          = Spoor Vrij
+OccupiedTrack       = Spoor Bezet
+PositionTrack       = Treinpositie
+AllocatedTrack      = Toegewezen
+DontUseTrack        = Buiten Gebruik
+ErrorTrack          = Spoor fout
 
-BlockSegment        = Block Segment
+BlockSegment        = Blokdeel
 #LeftEndSegment      = Left End Segment
 #RightEndSegment     = Right End Segment
 
-block               = Visible
-path                = Path Editing
-hidden              = Hidden
-toArrow             = Exit Arrow
-fromArrow           = Entry Arrow
+block               = Zichtbaar
+path                = Pad Bewerken
+hidden              = Verborgen
+toArrow             = Uitrijpijl
+fromArrow           = Inrijpijl
 
-OccupancySensor     = Occupancy Circuit
-ErrorSensor         = Error Sensor   
+OccupancySensor     = Bezetmeldingscircuit
+ErrorSensor         = Foutterugmelder   
 
-IconSetName         = Icon Set Name:
+IconSetName         = Naam Symbolenset:
 #IconName            = Icon Name:
 #editText            = Edit Text
-LinkName            = Panel or URL Name
-ToolTipLink         = Enter link to JMRI panel or http URL (optional)
+LinkName            = Paneel of URL
+ToolTipLink         = Vul koppeling in naar JMRI Paneel of http URL (optioneel)
 
 # Button labels
-CreateNewItem       = Add New Table Item...
-ShowIcons           = Show Icons
-HideIcons           = Hide Icons
-ButtonEditIcons     = Edit Icons
-ButtonShowCatalog   = Icon Catalog
-HideCatalog         = Hide Catalog
-ButtonBackgroundColor = Background Color
-updateButton        = Update Panel
-addNewFamily        = Add New Icon Set
-addIcon             = Add Icon
-deleteIcon          = Delete Icon
-createNewFamily     = New Icon Set
-deleteFamily        = Delete Icon Set
-ClearSelection      = Clear Table Selections
+CreateNewItem       = Voeg Nieuw Tabelelement toe...
+ShowIcons           = Toon Symbolen
+HideIcons           = Verberg Symbolen
+ButtonEditIcons     = Bewerk Symbolen
+ButtonShowCatalog   = Symbolencatalogus
+HideCatalog         = Verberg Catalogus
+ButtonBackgroundColor = Achtergrondkleur
+updateButton        = Werk Paneel bij
+addNewFamily        = Voeg nieuwe Symbolenset toe
+addIcon             = Voeg Symbool toe
+deleteIcon          = Verwijder Symbool
+createNewFamily     = Nieuwe Set
+deleteFamily        = Verwijder Set
+ClearSelection      = Verwijder markering in tabel
 #leverPosition       = Lever Position
-LeftRight           = Click Left/Right
-UpDown              = Click Up/Down
-ReadMemory          = Display Memory
-ReadWriteMemory     = Input Box Memory
-SpinnerMemory       = Spinner Memory
-ComboMemory         = ComboBox Memory
-OpenPicklist        = Open Detector Picklist
-addMissingStatus    = Add Missing Status
-deleteStatus        = Delete Status
-setDefaultIcons     = Set Default Icons
+LeftRight           = Klik Links/Rechts
+UpDown              = Klik Ophoog/Omlaag
+ReadMemory          = Toon Geheugenwaarde
+ReadWriteMemory     = Geheugen-invoerveld
+SpinnerMemory       = Geheugen-pinner
+ComboMemory         = Geheugen-keuzelijst
+OpenPicklist        = Open Terugmelder-keuzelijst
+addMissingStatus    = Voeg ontbrekende Status toe
+deleteStatus        = Verwijder Status
+setDefaultIcons     = Stel Standaardsymbolen in
 
 #title
-createNewIconSet    = Create New Icon Set for {0}s
+createNewIconSet    = Maak nieuwe {0}-symbolenset
 
-dragToPanel         = Drag to Panel
-AddToTableTitle     = Add New Item to Table
-ShowIconsTitle      = Edit Icons for {0}
-IconFamiliesLabel   = Icon Sets for {0}:
-infoTitle           = Information
-invisibleIcon       = invisible Icon
-circuitPaths        = Circuit Paths
+dragToPanel         = Sleep naar Paneel
+AddToTableTitle     = Voeg nieuw element toe aan tabel
+ShowIconsTitle      = Bewerk {0}-symbolen
+IconFamiliesLabel   = Symbolensets voor {0}:
+invisibleIcon       = Verborgen symbool
+circuitPaths        = Circuit-paden
 
-ColorChooser        = Background Color Chooser
-PanelColor          = Control Panel Color
+ColorChooser        = Achtergrondkleur-kiezer
+PanelColor          = Kleur Bedieningspaneel
 
-first               = First
-second              = Second
-third               = Third
-fourth              = Fourth
-fifth               = Fifth
-sixth               = Sixth
-seventh             = Seventh
-eighth              = Eighth
-nineth              = Ninth
-tenth               = Tenth
-                                         
-scale               = scale {0}:1
+first               = 1e
+second              = 2e
+third               = 3e
+fourth              = 4e
+fifth               = 5e
+sixth               = 6e
+seventh             = 7e
+eighth              = 8e
+nineth              = 9e
+tenth               = 10e
 
-FamilyName          = Icon Set "{0}".
-EnterFamilyName     = Enter a name for this icon set.
-NoFamilyName        = Icon set has no name. If you would like to name it, enter a name.
-DuplicateFamilyName = Family name "{0}" is the name of another icon set for {1}s. Please change the name.
-DuplicatePosition   = Sensor {0} is already set to be the {1} position.
-NeedPosition        = This Multisensor needs {0} positions. Select more rows from the table.
-NeedIcon            = This Multisensor has only {0} positions. Clear selections to change position order./nFor additional positions, add another icon.
-AllFamiliesDeleted  = All Icon sets for type {0} have been deleted.\nDo you want to restore the default sets?
-FamilyNotFound      = Icon Set "{1}" not found in type "{0}".
+FamilyName          = Symbolenset "{0}".
+EnterFamilyName     = Vul een naam in voor deze set.
+NoFamilyName        = Symbolenset heeft geen naam. Vul een naam in indien gewenst.
+DuplicateFamilyName = De naam "{0}" is al in gebruik voor een andere Symbolenset met {1}s. Vul een andere naam in.
+DuplicatePosition   = Terugmelder {0} is al in gebruik voor de {1} positie.
+NeedPosition        = Deze Multisensor vraagt {0} posities. Selecteer meer rijen in de tabel.
+NeedIcon            = Deze Multisensor heeft max. {0} posities. Wis selecties om de volgorde an te passen./nVoor meer posities, voeg nog een symbool toe.
+AllFamiliesDeleted  = Alle Symbolenset van type {0} zijn verwijderd.\nWil je de standaardset herstellen?
+FamilyNotFound      = Symbolenset "{1}" voor type "{0}" niet gevonden.
 #RedX                = Red X
-NoIconName          = Please enter a name for the Icon:
-UnkownFamilyName    = Icon set "{0}" is not known to the Palette. Do you want to add it to the icon sets?\nSelect "No" and no further messages will be posted.
-DuplicateIconName   = Another icon is named {0}.
-InvalidOccDetector  = {0} is not a valid Sensor or OBlock occupancy detector for Indicator track 
-InvalidErrSensor    = {0} is not a valid Error Sensor name
-ShowTrainName       = Display Train Name when occupied
-AllStatus           = The icon set includes all possible Track Status
-PickStatus          = The following status icons are missing. Choose what you want to add.
-SelectPathIcons     = Select the path(s) that include this icon
+NoIconName          = Vul een naam in voor dit Symbool:
+UnkownFamilyName    = Symbolenset "{0}" is niet bekend op het Palet. Toevoegen aan Symbolensets?\nDit soort meldingen wordt niet meer getoond als je "Nee" kiest.
+DuplicateIconName   = Er bestaat al een symbool genaamd "{0}".
+InvalidOccDetector  = {0} is geen geldige Terugmelder of Bezetmelder voor een Indicatiespoor 
+InvalidErrSensor    = {0} is geen geldige Foutterugmeldernaam
+ShowTrainName       = Toon Treinnaam indien bezet
+AllStatus           = De Symbolenset bevat alle mogelijke Meldstatussen
+PickStatus          = De volgende Stutussymbolen ontbreken. Kies wat je wilt toevoegen.
+SelectPathIcons     = Selecteer de paden die dit Symbool bevat(ten)
 
 # Instructions
-AddToPanel          = To Add an Icon to your control panel:
-PickRowReporter     = To add a Reporter, select its row from the table
-PickRowMast         = To add a Signal Mast, select its row from the table
-DragReporter        = then drag the display panel below to your control panel.
-DragIconPanel       = -- drag an icon from the display panel below to your control panel
-DragIconCatalog     = -- or press [{0}] and drag an icon from the catalog to your control panel
+AddToPanel          = Om een Symbool aan je Bedieningspaneel toe te voegen:
+PickRowReporter     = Om een Melder toe te voegen, selecteer de rij in de tabel
+PickRowMast         = Om een Seinmast toe te voegen, selecteer de rij in de tabel
+DragReporter        = en sleep de voorvertoning hieronder naar je Paneel.
+DragIconPanel       = -- sleep de voorvertoning hieronder naar je Paneel
+DragIconCatalog     = -- of klik op [{0}] en sleep een Symbool uit de catalogus naar je Paneel.
 ToAddDeleteModify   = To change an icon in the display panel below, drag an icon from the catalog to the icon.
 ToChangeName        = To change the name of an icon below, Double Click on the name.
 ToDeleteIcon        = To delete an icon, click on its name and then press the activated [{0}] button.
 ToLinkToURL         = To make clicking on this {0} link to another JMRI panel or URL, 
 enterPanel          = -- for a JMRI panel, type "frame:<panel name>" into the field at bottom.
 enterURL            = -- for an URL, type the link (i.e. "http://etc") into the field at bottom.
-ToColorBackground   = To Choose a Color Background: Press [{0}]
+ToColorBackground   = Om de achtergrondkleur in te stellen: Klik op [{0}]
 AddClockToPanel     = Drag the icon below to add a {0} to your control panel.
 nullMemoryIcon      = is displayed for the Display Memory Icon when Memory is null .
 emptyMemoryIcon     = When Memory is an empty string i.e. "" , the Display Memory Icon is blank.
 emptyMemoryFix      = When blank, enter a value in the other memory icons to view and drag it.
-comboMemory2        = Use the [{0}] popup to add or delete items.
+comboMemory2        = Gebruik de [{0}] keuzelijst om elemente toe te voegen of te verwijderen.
 comboMemory1        = The ComboBox Memory Icon sets a memory by selecting an item from the ComboBox.
 addTextAndAttrs     = Enter text and choose attributes for the label in the Preview panel.  Then
  
@@ -162,8 +159,8 @@ ToolTipSelectPathIcons = Check the paths this icon is needed to display the path
 ToolTipSetDefaultIcons = Change the Default Portal Icons to the selected icon family.
 
 # Decorator strings
-PreviewBorderTitle  = Preview
-sample              = Sample
-fixedWidth          = Fixed Width
-fixedHeight         = Fixed Height
-transparentBack     = Transparent Background
+PreviewBorderTitle  = Voorvertoning
+sample              = voorbeeld
+fixedWidth          = Vaste breedte
+fixedHeight         = Vaste hoogte
+transparentBack     = Achtergrond doorzichtig
