--- a/java/src/jmri/jmrit/Bundle_da.properties
+++ b/java/src/jmri/jmrit/Bundle_da.properties
@@ -183,6 +183,7 @@ right           = H\u00f8jre
 center          = Center
 Name            = Navn
 Length          = L\u00e6ngde
+scale           = scale {0}:1
 
 SigSys          = Signal System
 # interface colors
