--- a/java/src/jmri/jmrit/Bundle_de.properties
+++ b/java/src/jmri/jmrit/Bundle_de.properties
@@ -150,6 +150,7 @@ left            = Linksb\u00fcndig
 right           = Rechtsb\u00fcndig
 center          = Zentriert
 Length          = L\u00e4nge
+scale           = Ma\u00dfstab {0}:1
 
 # used in Display, Maintenance, RosterPrint
 Options         = Optionen
